--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 						<region>us-east-1</region>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
+						<objectStore>V2</objectStore>
 						<properties>
 							<anypoint.platform.client_id>28944a9da1124808b9f8d7f564a4ac65</anypoint.platform.client_id>
 							<anypoint.platform.secret>88Cbdd45A59448b590d74f2BE6a327a3</anypoint.platform.secret>
