--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,9 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>4.3.0</muleVersion>
-						<server>cloudhubdetails</server>
+						<!-- <server>cloudhubdetails</server> -->
+						<username>user2021</username>
+                        <password>$@nJapU_999</password>
 						<applicationName>cicd-deploy-2021-usecase</applicationName>
 						<environment>Sandbox</environment>
 						<region>us-east-1</region>
